Current Version: @@VERSION@@
* Fixed parsing of inner classes [Python, Bug #1411963].

ctags-5.6.1 (Mon July 07 2006)
* Added .svn to list of directories ignored during recursion (--recurse).

ctags-5.6 (Mon May 29 2006)
* Reformatted code for independence of tab stop setting.
* Changed default configuration to disable installation of etags links.
* Changed --langmap to first unmap each supplied extension from other languages.
* Added support for ASP constants [ASP, Patch #961842].
* Added support for GNU make extensions [Make].
* Added .mk as extension recognized as a make language file [Make].
* Added missing help for list-maps options [Bug #1201826].
* Added new extension field "typeref" [thanks to Bram Moolenaar].
* Extended functionality of Ruby parser with patch from Elliot Hughes [Ruby].
* Fixed creation of TAGS file with etags-include but no files [Bug #941233].
* Fixed problem reading last line of list file (-L) without final newline.
* Fixed infinite loop that could occur on files without final newline [C, Java].
* Fixed incorrect tag for first field of table [SQL].
* Fixed missing tags for functions beginning with underscore [Sh].
* Fixed missing tags for functions with variable arg list [C, Bug #1201689].
* Fixed parsing problem with parentheses in argument list [C, Bug #1085585].
* Fixed problem in preprocessor directive handling [C, Bug #1086609].

ctags-5.5.4 (Thu Mar 25 2004)
* Fixed broken -R option.

ctags-5.5.3 (Sun Mar 14 2004)
* Removed forgotten debug statement [Bug #811704].
* Added support for Perl labels.
* Added support for Perl "use constant" [Perl, Patch #853704, Feature Request
  #710017].
* Added support for package qualification of tags, removing useless "package"
  tag kind [Perl, Feature Request #448887].
* Added support for "and" keyword [SML, Bug #816636].
* Added support for variables [PHP].
* Fixed problem destroying tag file with certain info options [Bug #845502].
* Fixed portability problem [DJGPP].